--- a/assest/Style.css
+++ b/assest/Style.css
@@ -1,7 +1,77 @@
-.li{
-    display:inline;
+img{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    height: 300px;
+    width: 400px;
+   
+}
+.contact{
+    display: block;
+    background-color: blanchedalmond;
     position: relative;
-    left: 80%;
-    margin: 10px;
+    text-align: center;
+    border: 5px;
+    border-color: #f1a94a;
+    border-style: solid;
+    border-radius: 25px;
+    padding: 20px;
+    margin-left: 35%;
+    margin-right: 35%;
+}
+.content{
+    
+    position: relative;
+    text-align: center;
+    margin: 0;
+}
+.button{
     color: white;
+    background-color: #3c280d;
+    width: 75px;
+}
+footer,header{
+    background-color: green;
+    color: white;
+    height: 50px;
+    text-align: center;
+    margin: 0;
+}
+ul{
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    margin-left: 80%;
+    /*position: relative;
+    /*left: 80%;
+    margin: 10px;
+    color: white;*/
+}
+li {
+    float: left;
+    padding: 16px;
+    
+  }
+.bar{
+    background-color: blanchedalmond;
+}
+.container{
+    background-color: blanchedalmond;
+    height: 150px;
+    text-align: center;
+    padding: 10px;
+    margin-bottom: 0;
+}
+footer{
+    margin-top: 0;
+ 
+}
+*{
+    padding: 0;
+    margin: 0;
+}
+a{
+    color: white;
+    text-decoration: none;
 }
