--- a/assest/Style.css
+++ b/assest/Style.css
@@ -1,3 +1,19 @@
+*{
+    padding: 0;
+    margin: 0;
+}
+a{
+    color: white;
+    text-decoration: none;
+}
+
+header{
+    position: fixed;
+    top: 0;
+    width: 100%;
+    font-family: Arial, Helvetica, sans-serif;
+    
+}
 img{
     display: block;
     margin-left: auto;
@@ -18,12 +34,14 @@ img{
     padding: 20px;
     margin-left: 35%;
     margin-right: 35%;
+    font-family: Arial, Helvetica, sans-serif;
 }
 .content{
     
-    position: relative;
+    font-family: Arial, Helvetica, sans-serif;
     text-align: center;
     margin: 0;
+    padding: 5%;
 }
 .button{
     color: white;
@@ -36,6 +54,7 @@ footer,header{
     height: 50px;
     text-align: center;
     margin: 0;
+    font-family: Arial, Helvetica, sans-serif;
 }
 ul{
     list-style-type: none;
@@ -43,10 +62,8 @@ ul{
     padding: 0;
     overflow: hidden;
     margin-left: 80%;
-    /*position: relative;
-    /*left: 80%;
-    margin: 10px;
-    color: white;*/
+    font-family: Arial, Helvetica, sans-serif;
+
 }
 li {
     float: left;
@@ -55,6 +72,7 @@ li {
   }
 .bar{
     background-color: blanchedalmond;
+    position: relative;
 }
 .container{
     background-color: blanchedalmond;
@@ -62,16 +80,9 @@ li {
     text-align: center;
     padding: 10px;
     margin-bottom: 0;
+    font-family: Arial, Helvetica, sans-serif;
 }
 footer{
     margin-top: 0;
  
-}
-*{
-    padding: 0;
-    margin: 0;
-}
-a{
-    color: white;
-    text-decoration: none;
 }
